--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -34,8 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  freezed_annotation: ^1.1.0
 
 dev_dependencies:
+  build_runner:
+  freezed: ^1.1.1
+  json_serializable: ^6.1.4
   flutter_test:
     sdk: flutter
 
