--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -35,9 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   freezed_annotation: ^1.1.0
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.9
+  sqflite: ^2.0.2
 
 dev_dependencies:
   build_runner:
+  hive_generator: ^1.1.2
   freezed: ^1.1.1
   json_serializable: ^6.1.4
   flutter_test:
