--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mqtt_client: ^9.6.5
   mobile_scanner: ^0.1.1
   qr_code_scanner: ^0.7.0
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   build_runner:
