--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   mobile_scanner: ^0.1.1
   qr_code_scanner: ^0.7.0
   json_annotation: ^4.4.0
+  carousel_slider: ^4.0.0
+  google_fonts: ^2.3.1
+  intl: ^0.17.0
+  weather: ^2.0.1
 
 dev_dependencies:
   build_runner:
@@ -85,12 +89,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+fonts:
+  - family: Syncopate
+    fonts:
+      - asset: fonts/Syncopate-Regular.ttf
+      - asset: fonts/Syncopate-Bold.ttf
+        style: bold
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
