[App] Local Storage of each Device

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ TMP006_IRThermopile\__pycache__
 .vscode
 .vscode/settings.json
 Test_Scripts/TMP006_IRThermopile/__pycache__/IR_Library.cpython-39.pyc
-
+**/.DS_Store
