--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_fonts: ^2.3.1
   intl: ^0.17.0
   weather: ^2.0.1
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   build_runner:
