[App] More changes

--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.17.0
   weather: ^2.0.1
   shared_preferences: ^2.0.13
+  weather_icons: ^3.0.0
 
 dev_dependencies:
   build_runner:
