--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   weather: ^2.0.1
   shared_preferences: ^2.0.13
   weather_icons: ^3.0.0
+  share_plus: ^3.1.0
 
 dev_dependencies:
   build_runner:
