--- a/imfresh/pubspec.yaml
+++ b/imfresh/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   shared_preferences: ^2.0.13
   weather_icons: ^3.0.0
   share_plus: ^3.1.0
+  charts_flutter: ^0.12.0
+  http: ^0.13.4
 
 dev_dependencies:
   build_runner:
